--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -104,6 +104,16 @@
             class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
             >Post APi </a
           >
+          <a
+            routerLink="/lifecycle"
+            class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
+            >LifeCycle </a
+          >
+          <a
+            routerLink="/ngtemplate"
+            class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
+            >Ng-Template </a
+          >
           </div>
         </div>
       </div>
